RESOLVED FIXED218769
GPUProcess does not properly get relaunched after crashing
https://bugs.webkit.org/show_bug.cgi?id=218769
Summary GPUProcess does not properly get relaunched after crashing
Chris Dumez
Reported 2020-11-10 12:57:19 PST
GPUProcess does not properly get relaunched after crashing.
Attachments
Patch (28.59 KB, patch)
2020-11-10 13:03 PST, Chris Dumez
ews-feeder: commit-queue-
Patch (28.80 KB, patch)
2020-11-10 13:11 PST, Chris Dumez
no flags
Patch (29.24 KB, patch)
2020-11-10 14:10 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-11-10 13:03:53 PST
Chris Dumez
Comment 2 2020-11-10 13:11:06 PST
Geoffrey Garen
Comment 3 2020-11-10 13:24:05 PST
Comment on attachment 413727 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=413727&action=review > Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:86 > GPUProcessProxy* GPUProcessProxy::m_singleton = nullptr; Can we use WeakPtr for m_singleton?
Chris Dumez
Comment 4 2020-11-10 13:47:38 PST
(In reply to Geoffrey Garen from comment #3) > Comment on attachment 413727 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=413727&action=review > > > Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:86 > > GPUProcessProxy* GPUProcessProxy::m_singleton = nullptr; > > Can we use WeakPtr for m_singleton? In file included from /Volumes/Data/WebKit/OpenSource/WebKitBuild/Release/DerivedSources/WebKit2/unified-sources/UnifiedSource54.cpp:3: /Volumes/Data/WebKit/OpenSource/Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:86:43: error: declaration requires an exit-time destructor [-Werror,-Wexit-time-destructors] WeakPtr<GPUProcessProxy> GPUProcessProxy::m_singleton; /Volumes/Data/WebKit/OpenSource/Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:86:43: error: declaration requires a global destructor [-Werror,-Wglobal-constructors] Do you have a proposal to make it work?
Geoffrey Garen
Comment 5 2020-11-10 13:53:07 PST
I *think* NeverDestroyed<WeakPtr<GPUProcessProxy>> should work, since NeverDestroyed avoids exit time destructors and WeakPtr allows assignment.
Chris Dumez
Comment 6 2020-11-10 14:10:09 PST
EWS
Comment 7 2020-11-10 15:36:35 PST
Committed r269657: <https://trac.webkit.org/changeset/269657> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413739 [details].
Radar WebKit Bug Importer
Comment 8 2020-11-10 15:37:20 PST
Note You need to log in before you can comment on or make changes to this bug.