GPUProcess does not properly get relaunched after crashing https://bugs.webkit.org/show_bug.cgi?id=218769

Reviewed by Tim Horton.

Source/WebKit:

After the GPUProcess crashes, we need to make sure we construct a new GPUProcessProxy
so that a new process gets relaunched. Previously, this wasn't possible because
the GPUProcessProxy was a "never destroyed" singleton.

The GPUProcessProxy is now kept alive by the WebProcessPool objects refing it.
Upon crashing, all WebProcessPools clear their GPUProcessProxy RefPtr so that the
old GPUProcessProxy gets destroyed. The next time a GPUProcessProxy is needed, a new
one gets constructed. We still make sure that all WebProcessPool objects share the
same GPUProcessProxy, as before this patch.

* UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool _gpuProcessIdentifier]):
* UIProcess/API/Cocoa/WKProcessPoolPrivate.h:
* UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::getOrCreate):
(WebKit::GPUProcessProxy::GPUProcessProxy):
(WebKit::GPUProcessProxy::~GPUProcessProxy):
(WebKit::GPUProcessProxy::processWillShutDown):
(WebKit::GPUProcessProxy::gpuProcessCrashed):
* UIProcess/GPU/GPUProcessProxy.h:
* UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::syncWithWebCorePrefs const):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::willStartCapture):
(WebKit::WebPageProxy::setOrientationForMediaCapture):
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::ensureGPUProcess):
(WebKit::WebProcessPool::gpuProcessCrashed):
(WebKit::WebProcessPool::getGPUProcessConnection):
(WebKit::WebProcessPool::updateAudibleMediaAssertions):
* UIProcess/WebProcessPool.h:
* UIProcess/ios/WKContentView.mm:
(-[WKContentView _setupVisibilityPropagationViewForGPUProcess]):

Tools:

Add API test coverage.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm: Added.
(TEST):
* TestWebKitAPI/Tests/WebKitCocoa/audio-context-playing.html: Added.


Canonical link: https://commits.webkit.org/231440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269657 268f45cc-cd09-0410-ab3c-d52691b4dbfc