Source/WebKit/UIProcess/GPU/GPUProcessProxy.h
@@ -47,13 +47,14 @@ class WebProcessProxy;
 class WebsiteDataStore;
 struct GPUProcessCreationParameters;
 
-class GPUProcessProxy final : public AuxiliaryProcessProxy, private ProcessThrottlerClient, public CanMakeWeakPtr<GPUProcessProxy> {
+class GPUProcessProxy final : public AuxiliaryProcessProxy, private ProcessThrottlerClient, public CanMakeWeakPtr<GPUProcessProxy>, public RefCounted<GPUProcessProxy> {
     WTF_MAKE_FAST_ALLOCATED;
     WTF_MAKE_NONCOPYABLE(GPUProcessProxy);
     friend LazyNeverDestroyed<GPUProcessProxy>;
 public:
-    static GPUProcessProxy& singleton();
-    static GPUProcessProxy* singletonIfCreated() { return m_singleton; }
+    static Ref<GPUProcessProxy> getOrCreate();
+    static GPUProcessProxy* singletonIfCreated();
+    ~GPUProcessProxy();
 
     void getGPUProcessConnection(WebProcessProxy&, Messages::WebProcessProxy::GetGPUProcessConnectionDelayedReply&&);
 
@@ -78,7 +79,6 @@ public:
 
 private:
     explicit GPUProcessProxy();
-    ~GPUProcessProxy();
 
     void addSession(const WebsiteDataStore&);
 
@@ -105,8 +105,6 @@ private:
 #if HAVE(VISIBILITY_PROPAGATION_VIEW)
     void didCreateContextForVisibilityPropagation(LayerHostingContextID);
 #endif
-
-    static GPUProcessProxy* m_singleton;
 
     ProcessThrottler m_throttler;
     ProcessThrottler::ActivityVariant m_activityFromWebProcesses;
